--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   database:
     image: postgres:14.2-bullseye
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - two-shot-pgdata:/var/lib/postgresql/data
       - ./db:/docker-entrypoint-initdb.d
     environment:
       - POSTGRES_MULTIPLE_DATABASES=shoes,hats,wardrobe
